Adicionando gitignore e removendo Dockerfile

--- a/simple-html/mirror-fashion/about-us.html
+++ b/simple-html/mirror-fashion/about-us.html
@@ -29,7 +29,7 @@
 
     <figure>
         <img src="img/familia-pelho.jpg"/>
-        <figcaption>Imagem centro distribuição Mirror Fashion</figcaption>
+        <figcaption>Imagem familia Pelho</figcaption>
     </figure>
 
     <p>A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. A 
