--- a/simple-html/mirror-fashion/about-us.html
+++ b/simple-html/mirror-fashion/about-us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirror Fashion</title>
+    <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
     <img src="img/logo.png" alt="Logo-Mirro-fashion"/>
