--- a/simple-html/mirror-fashion/about-us.html
+++ b/simple-html/mirror-fashion/about-us.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirror Fashion</title>
     <link rel="stylesheet" href="./css/about.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
+    
 </head>
 <body>
     <img src="img/logo.png" alt="Logo-Mirro-fashion"/>
@@ -51,6 +55,17 @@
     <p>Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios, 
         homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
         Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
-
+    
+    <h2>Diferenciais</h2>
+    <ol>
+    <li>Menor preço do varejo, </li>
+     <li>Se você achar uma loja mais s, leva o produto de graça</li>
+     <li>Pague em reais, dólares, euros ou bitcoins</li>
+     <li>Todas as compras com frete grátis para o mundo todo</li>
+     <li>Maior comércio eletrônico de moda do mundo</li>
+     <li>Atendimento via telefone, email, chat, twitter, facebook, carta, fax e telegrama</li>
+     <li>Presente em 124 países</li>
+     <li>Mais de um milhão de funcionários em todo o mundo</li>
+    </ol>
 </body>
 </html>
