--- a/simple-html/mirror-fashion/about-us.html
+++ b/simple-html/mirror-fashion/about-us.html
@@ -25,7 +25,7 @@
     <p>Nosso centro de distribuição fica em <a href="https://www.google.com.br/maps?q=Jacarezinho">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que 
         distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
 
-    <figure>
+    <figure id="centro-distribuicao">
         <img src="img/centro-distribuicao.png"/>
         <figcaption>Imagem centro distribuição Mirror Fashion</figcaption>
     </figure>
@@ -36,7 +36,7 @@
     
     <h2 id="historia">História</h2>
 
-    <figure>
+    <figure id="familia-pelho">
         <img src="img/familia-pelho.jpg"/>
         <figcaption>Imagem familia Pelho</figcaption>
     </figure>
@@ -63,7 +63,7 @@
     <h2 id="diferenciais">Diferenciais</h2>
     <ol>
     <li>Menor preço do varejo, </li>
-     <li>Se você achar uma loja mais s, leva o produto de graça</li>
+     <li>Se você achar uma loja mais barata, leva o produto de graça</li>
      <li>Pague em reais, dólares, euros ou bitcoins</li>
      <li>Todas as compras com frete grátis para o mundo todo</li>
      <li>Maior comércio eletrônico de moda do mundo</li>
@@ -71,5 +71,10 @@
      <li>Presente em 124 países</li>
      <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ol>
+
+    <div id="rodape">
+        <img src="img/logo.png">
+        &copy; Copyright Mirror Fashion
+    </div>
 </body>
 </html>
