--- a/simple-html/mirror-fashion/about-us.html
+++ b/simple-html/mirror-fashion/about-us.html
@@ -1,80 +1,130 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mirror Fashion</title>
-    <link rel="stylesheet" href="./css/about.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <img src="img/logo.png" alt="Logo-Mirro-fashion"/>
+    <link rel="stylesheet" href="./css/about.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav>
+      <header>
+        <img src="img/logo.png" alt="Logo-Mirro-fashion" />
 
-    <h1>Mirror Fashion</h1> 
+        <h1>Mirror Fashion</h1>
+      </header>
+      <main>
+        <section>
+          <p>
+            <strong>Mirror Fashion</strong> é a maior empresa comércio
+            eletrônico no segmento de moda em todo o mundo. Fundada em 1932,
+            possui filiais em 124 países, sendo líder de mercado com mais de 90%
+            de participação em 118 deles.
+          </p>
 
-    <p><strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
-        Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
-        participação em 118 deles.</p>
+          <p>
+            Nosso centro de distribuição fica em
+            <a href="https://www.google.com.br/maps?q=Jacarezinho"
+              >Jacarezinho, no Paraná</a
+            >. De lá, saem 48 aviões que distribuem nossos produtos às casas do
+            mundo todo. Nosso centro de distribuição:
+          </p>
 
-    <p>Nosso centro de distribuição fica em <a href="https://www.google.com.br/maps?q=Jacarezinho">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que 
-        distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
+          <figure id="centro-distribuicao">
+            <img src="img/centro-distribuicao.png" />
+            <figcaption>Imagem centro distribuição Mirror Fashion</figcaption>
+          </figure>
 
-    <figure id="centro-distribuicao">
-        <img src="img/centro-distribuicao.png"/>
-        <figcaption>Imagem centro distribuição Mirror Fashion</figcaption>
-    </figure>
+          <p>
+            Compre suas roupas e acessórios na Mirror Fashion. Acesse
+            <a href="index.html">nossa loja</a> ou entre em contato se tiver
+            dúvidas. <a href="#historia">Conheça também nossa história</a> e
+            <a href="#diferenciais">nossos diferenciais</a>.
+          </p>
+        </section>
 
-    <p>Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="index.html">nossa loja</a> ou entre em contato 
-        se tiver dúvidas. <a href="#historia">Conheça também nossa história</a> e <a href="#diferenciais">nossos diferenciais</a>.
-    </p>
-    
-    <h2 id="historia">História</h2>
+        <section>
+          <h2 id="historia">História</h2>
 
-    <figure id="familia-pelho">
-        <img src="img/familia-pelho.jpg"/>
-        <figcaption>Imagem familia Pelho</figcaption>
-    </figure>
+          <figure id="familia-pelho">
+            <img src="img/familia-pelho.jpg" />
+            <figcaption>Imagem familia Pelho</figcaption>
+          </figure>
 
-    <p>A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. A 
-        família Pelho, tradicional da região, investiu todas as suas economias nessa nova iniciativa, 
-        revolucionária para a época. O fundador <em><strong>Simões Pelho</strong></em>, dotado de particular visão 
-        administrativa, guiou os negócios da empresa durante mais de 50 anos, muitos deles ao lado 
-        de seu filho <em><strong>S. Pelho Filho</strong></em>, atual CEO. O nome da empresa é inspirado no nome da família.</p>
+          <p>
+            A fundação em 1932 ocorreu no momento da descoberta econônica do
+            interior do Paraná. A família Pelho, tradicional da região, investiu
+            todas as suas economias nessa nova iniciativa, revolucionária para a
+            época. O fundador <em><strong>Simões Pelho</strong></em
+            >, dotado de particular visão administrativa, guiou os negócios da
+            empresa durante mais de 50 anos, muitos deles ao lado de seu filho
+            <em><strong>S. Pelho Filho</strong></em
+            >, atual CEO. O nome da empresa é inspirado no nome da família.
+          </p>
 
-    <p>O crescimento da empresa foi praticamente instantâneo. Nos primeiros 5 anos, já atendia 18 países. 
-        Bateu a marca de 100 países em apenas 15 anos de existência. Até hoje, já atendeu 740 milhões 
-        de usuários diferentes, em bilhões de diferentes pedidos.</p>
+          <p>
+            O crescimento da empresa foi praticamente instantâneo. Nos primeiros
+            5 anos, já atendia 18 países. Bateu a marca de 100 países em apenas
+            15 anos de existência. Até hoje, já atendeu 740 milhões de usuários
+            diferentes, em bilhões de diferentes pedidos.
+          </p>
 
-    <p>O crescimento em número de funcionários é também assombroso. Hoje, é a maior empregadora do 
-        Brasil, mas mesmo após apenas 5 anos de sua existência, já possuía 30 mil funcionários. Fora do 
-        Brasil, há 240 mil funcionários, além dos 890 mil brasileiros nas instalações de Jacarezinho e 
-        nos escritórios em todo país.</p>
+          <p>
+            O crescimento em número de funcionários é também assombroso. Hoje, é
+            a maior empregadora do Brasil, mas mesmo após apenas 5 anos de sua
+            existência, já possuía 30 mil funcionários. Fora do Brasil, há 240
+            mil funcionários, além dos 890 mil brasileiros nas instalações de
+            Jacarezinho e nos escritórios em todo país.
+          </p>
 
-    <p>Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios, 
-        homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
-        Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
-    
-    <h2 id="diferenciais">Diferenciais</h2>
-    <ol>
-    <li>Menor preço do varejo, </li>
-     <li>Se você achar uma loja mais barata, leva o produto de graça</li>
-     <li>Pague em reais, dólares, euros ou bitcoins</li>
-     <li>Todas as compras com frete grátis para o mundo todo</li>
-     <li>Maior comércio eletrônico de moda do mundo</li>
-     <li>Atendimento via telefone, email, chat, twitter, facebook, carta, fax e telegrama</li>
-     <li>Presente em 124 países</li>
-     <li>Mais de um milhão de funcionários em todo o mundo</li>
-    </ol>
+          <p>
+            Dada a importância econômica da empresa para o Brasil, a família
+            Pelho já recebeu diversos prêmios, homenagens e condecorações. Todos
+            os presidentes do Brasil já visitaram as instalações da Mirror
+            Fashion, além de presidentes da União Européia, Ásia e o
+            secretário-geral da ONU.
+          </p>
+        </section>
 
-    <div id="rodape">
-        <img src="img/logo.png">
-        &copy; Copyright Mirror Fashion
-    </div>
-</body>
+        <section>
+          <h2 id="diferenciais">Diferenciais</h2>
+          <ol>
+            <li>Menor preço do varejo,</li>
+            <li>Se você achar uma loja mais barata, leva o produto de graça</li>
+            <li>Pague em reais, dólares, euros ou bitcoins</li>
+            <li>Todas as compras com frete grátis para o mundo todo</li>
+            <li>Maior comércio eletrônico de moda do mundo</li>
+            <li>
+              Atendimento via telefone, email, chat, twitter, facebook, carta,
+              fax e telegrama
+            </li>
+            <li>Presente em 124 países</li>
+            <li>Mais de um milhão de funcionários em todo o mundo</li>
+          </ol>
+        </section>
+      </main>
+      <footer>
+        <div>
+          <img src="img/logo.png" />
+          &copy; Copyright Mirror Fashion
+        </div>
+      </footer>
+    </nav>
+  </body>
 </html>
