--- a/simple-html/mirror-fashion/about-us.html
+++ b/simple-html/mirror-fashion/about-us.html
@@ -42,7 +42,7 @@
           <p>
             Nosso centro de distribuição fica em
             <a href="https://www.google.com.br/maps?q=Jacarezinho"
-              >Jacarezinho, no Paraná</a
+              title="Google Maps">Jacarezinho, no Paraná</a
             >. De lá, saem 48 aviões que distribuem nossos produtos às casas do
             mundo todo. Nosso centro de distribuição:
           </p>
@@ -127,5 +127,8 @@
         </div>
       </footer>
     </nav>
+
+    <!-- Código JavaScript-->
+    <script src="js/main.js"></script>
   </body>
 </html>
